objects/ALTF__Account_Plan_Answer__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Plan_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AM Question</label>
        <referenceTo>ALTF__Account_Plan_Question__c</referenceTo>
        <relationshipLabel>Altify AM Plan Answers</relationshipLabel>
        <relationshipName>AM_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Plan__c</fullName>
        <label>Account Manager Plan</label>
        <referenceTo>ALTF__Account_Plan__c</referenceTo>
        <relationshipLabel>Altify Account Manager Plan Answers</relationshipLabel>
        <relationshipName>AM_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Answer__c</fullName>
        <label>Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Note_Entered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Note Entered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Note__c</fullName>
        <label>Note</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <label>Altify AM Plan Answer</label>
    <nameField>
        <label>Account Manager Plan Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Manager Plan Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>